--- a/src/Presentation/CommanderMinApi.Api/appsettings.json
+++ b/src/Presentation/CommanderMinApi.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "CommanderConnectionString": "Server=localhost,1433;Initial Catalog=CommanderMinApiDb;TrustServerCertificate=true;Trusted_Connection=True;"
+  },
   "AllowedHosts": "*"
 }
