Implementing Platform stuff

--- a/src/Core/CommanderMinApi.Application/CommanderMinApi.Application.csproj
+++ b/src/Core/CommanderMinApi.Application/CommanderMinApi.Application.csproj
@@ -20,8 +20,7 @@
 
   <ItemGroup>
     <Folder Include="Exceptions\" />
-    <Folder Include="Features\Commands\Platform\" />
-    <Folder Include="Features\Queries\Platform\" />
+    <Folder Include="Features\Queries\Platforms\" />
   </ItemGroup>
 
 </Project>
