--- a/src/Presentation/CommanderMinApi.Api/appsettings.json
+++ b/src/Presentation/CommanderMinApi.Api/appsettings.json
@@ -8,5 +8,12 @@
   "ConnectionStrings": {
     "CommanderConnectionString": "Server=localhost,1433;Initial Catalog=CommanderMinApiDb;TrustServerCertificate=true;Trusted_Connection=True;"
   },
+  "Jwt": {
+    "Key": "ThisismySecretKey",
+    "UserName": "mrgruby",
+    "Hash": "$2a$12$wu0EyijSbtbvPADPHqWBBuDfELVqcCruJ4AeKbul6B3U4OtrKGwP.",
+    "Issuer": "http://cleancommanderapi.azurewebsites.net",
+    "Audience": "http://cleancommanderapi.azurewebsites.net"
+  },
   "AllowedHosts": "*"
 }
