--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,14 @@
+name: publish
+
 on:
+  workflow_dispatch:
   push:
     branches:
-    - '*'
+    - master
+    
+env:
+  AZURE_WEBAPP_NAME: CommanderMinApi
+  AZURE_WEBAPP_PACKAGE_PATH: "./publish"
 
 jobs:
   publish:
@@ -22,4 +29,11 @@ jobs:
         run: dotnet build ./CommanderMinApi.sln --configuration Release --no-restore
         
       - name: Publish
-        run: dotnet publish ./CommanderMinApi.sln --configuration Release --no-build
+        run: dotnet publish ./CommanderMinApi.sln --configuration Release --no-build --output '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}'
+        
+      - name: Deployment
+        uses: actions/webapps-deploy@v2
+        with:
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}
+          publish-profile: ${{ secrets.AZURE_PUBLISH_PROFILE }}
+          package: ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
