--- a/.github/workflows/master_commanderminapi.yml
+++ b/.github/workflows/master_commanderminapi.yml
@@ -8,6 +8,9 @@ on:
     branches:
       - master
   workflow_dispatch:
+  
+permissions:
+  contents: read
 
 jobs:
   build:
@@ -54,4 +57,4 @@ jobs:
           app-name: 'CommanderMinApi'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_F01C2BD4DF06449BB8DEC5EF0793E3CE }}
-          package: ./src
+          package: .
