--- a/.github/workflows/master_commanderminapi.yml
+++ b/.github/workflows/master_commanderminapi.yml
@@ -35,7 +35,7 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          path: ./myapp
 
   deploy:
     runs-on: ubuntu-latest
@@ -49,6 +49,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: .net-app
+          path: upload-artifact
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
@@ -57,4 +58,4 @@ jobs:
           app-name: 'CommanderMinApi'
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_F01C2BD4DF06449BB8DEC5EF0793E3CE }}
-          package: ./src/Presentation/CommanderMinApi.Api
+          package: upload-artifact
