--- a/.github/workflows/master_commanderminapi.yml
+++ b/.github/workflows/master_commanderminapi.yml
@@ -26,7 +26,7 @@ jobs:
           include-prerelease: true
 
       - name: Build with dotnet
-        run: dotnet build src/CommanderMinApi.sln --configuration Release
+        run: dotnet build CommanderMinApi.sln --configuration Release
 
       - name: dotnet publish
         run: dotnet publish src/Presentation/CommanderMinApi.Api/CommanderMinApi.Api.csproj -c Release -o ${{env.DOTNET_ROOT}}/myapp
