--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
     
 env:
   AZURE_WEBAPP_NAME: CommanderMinApi
-  AZURE_WEBAPP_PACKAGE_PATH: "."
+  AZURE_WEBAPP_PACKAGE_PATH: "./publish"
 
 jobs:
   publish:
@@ -29,7 +29,7 @@ jobs:
         run: dotnet build ./CommanderMinApi.sln --configuration Release --no-restore
         
       - name: Publish
-        run: dotnet publish src/Presentation/CommanderMinApi.Api/CommanderMinApi.Api.csproj --configuration Release --no-build --property:PublishDir=${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+        run: dotnet publish src/Presentation/CommanderMinApi.Api/CommanderMinApi.Api.csproj --configuration Release --no-build --output '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}'
         
       - name: Deployment
         uses: azure/webapps-deploy@v2
