--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,12 +24,15 @@ jobs:
           
       - name: Restore
         run: dotnet restore ./CommanderMinApi.sln
+        working-directory: src
         
       - name: Build
-        run: dotnet build ./CommanderMinApi.sln --configuration Release --no-restore
+        run: dotnet build --configuration Release --no-restore
+        working-directory: src
         
       - name: Publish
-        run: dotnet publish ./CommanderMinApi.sln --configuration Release --no-build --output '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}'
+        run: dotnet publish --configuration Release --no-build --output '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}'
+        working-directory: src
         
       - name: Deployment
         uses: azure/webapps-deploy@v2
