--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,7 @@ on:
 env:
   AZURE_WEBAPP_NAME: CommanderMinApi
   AZURE_WEBAPP_PACKAGE_PATH: "./publish"
+  SOURCE_PATH: './src/Presentation/CommanderMinApi.Api/CommanderMinApi.Api
 
 jobs:
   publish:
@@ -22,17 +23,15 @@ jobs:
         with:
           dotnet-version: '7.0.x'
           
-      - name: Restore
-        run: dotnet restore ./CommanderMinApi.sln
-        working-directory: src
-        
-      - name: Build
-        run: dotnet build --configuration Release --no-restore
-        working-directory: src
-        
-      - name: Publish
-        run: dotnet publish --configuration Release --no-build --output '${{ env.AZURE_WEBAPP_PACKAGE_PATH }}'
-        working-directory: src
+      - name: Install dependencies
+        run: |
+          cd ${{ env.SOURCE_PATH }}
+          dotnet restore                
+      - name: Build and Publish
+        run: |
+          cd ${{ env.SOURCE_PATH }}         
+          dotnet build --configuration Release --no-restore
+          dotnet publish -c Release -o release
         
       - name: Deployment
         uses: azure/webapps-deploy@v2
