--- a/.github/workflows/master_commanderminapi.yml
+++ b/.github/workflows/master_commanderminapi.yml
@@ -29,7 +29,7 @@ jobs:
         run: dotnet build ./src/Presentation/CommanderMinApi.Api --configuration Release
 
       - name: dotnet publish
-        run: dotnet publish ./src/Presentation/CommanderMinApi.Api -c Release -o ${{env.DOTNET_ROOT}}/myapp
+        run: dotnet publish ./src/Presentation/CommanderMinApi.Api -c Release --property:PublishDir='${{ env.env.DOTNET_ROOT }}/myapp'
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
